--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=final
+
+spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/java-ecommerce
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
+
+
